--- a/eg/result/r2g_en.html
+++ b/eg/result/r2g_en.html
@@ -1,12 +1,19 @@
+<html>
+<head>
+<title>Converting dates from French Revolutionary to Gregorian</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1>Converting dates from French Revolutionary to Gregorian</h1>
 <table border><tr><td></td><th align='center' colspan='8'>Year to letter</th></tr><tr align='right'><td></td>
-<td> 0<br> 8<br>16<br>24<br>32<br>40<br>48<br>56<br>64<br>72<br>80<br>88<br>96</td>
-<td> 1<br> 9<br>17<br>25<br>33<br>41<br>49<br>57<br>65<br>73<br>81<br>89<br>97</td>
-<td> 2<br>10<br>18<br>26<br>34<br>42<br>50<br>58<br>66<br>74<br>82<br>90<br>98</td>
-<td> 3<br>11<br>19<br>27<br>35<br>43<br>51<br>59<br>67<br>75<br>83<br>91<br>99</td>
-<td> 4<br>12<br>20<br>28<br>36<br>44<br>52<br>60<br>68<br>76<br>84<br>92<br>&nbsp;</td>
-<td> 5<br>13<br>21<br>29<br>37<br>45<br>53<br>61<br>69<br>77<br>85<br>93<br>&nbsp;</td>
-<td> 6<br>14<br>22<br>30<br>38<br>46<br>54<br>62<br>70<br>78<br>86<br>94<br>&nbsp;</td>
-<td> 7<br>15<br>23<br>31<br>39<br>47<br>55<br>63<br>71<br>79<br>87<br>95<br>&nbsp;</td>
+<td> 0<br /> 8<br />16<br />24<br />32<br />40<br />48<br />56<br />64<br />72<br />80<br />88<br />96</td>
+<td> 1<br /> 9<br />17<br />25<br />33<br />41<br />49<br />57<br />65<br />73<br />81<br />89<br />97</td>
+<td> 2<br />10<br />18<br />26<br />34<br />42<br />50<br />58<br />66<br />74<br />82<br />90<br />98</td>
+<td> 3<br />11<br />19<br />27<br />35<br />43<br />51<br />59<br />67<br />75<br />83<br />91<br />99</td>
+<td> 4<br />12<br />20<br />28<br />36<br />44<br />52<br />60<br />68<br />76<br />84<br />92<br />&nbsp;</td>
+<td> 5<br />13<br />21<br />29<br />37<br />45<br />53<br />61<br />69<br />77<br />85<br />93<br />&nbsp;</td>
+<td> 6<br />14<br />22<br />30<br />38<br />46<br />54<br />62<br />70<br />78<br />86<br />94<br />&nbsp;</td>
+<td> 7<br />15<br />23<br />31<br />39<br />47<br />55<br />63<br />71<br />79<br />87<br />95<br />&nbsp;</td>
 </tr>
 <tr align='center'><td>1 - 8</td><td>ch</td><td>bg</td><td>bg</td><td>bg</td><td>cg</td><td>bg</td><td>bg</td><td>bg</td></tr>
 <tr align='center'><td>9 - 19</td><td>dh</td><td>ch</td><td>ch</td><td>ch</td><td>dh</td><td>ch</td><td>ch</td><td>ch</td></tr>
@@ -19,20 +26,20 @@
 </table>
 <p><table border><tr><th align='center' colspan='5'>Beginning of Year</th></tr>
 <tr align='center'><th>Year + 1791</th><th>a</th><th>b</th><th>c</th><th>d</th></tr>
-<tr align='center'><td>Vendémiaire</td><td>+20 Sep<br>-10 Oct</td>
-<td>+21 Sep<br>-9 Oct</td>
-<td>+22 Sep<br>-8 Oct</td>
-<td>+23 Sep<br>-7 Oct</td>
+<tr align='center'><td>Vendémiaire</td><td>+20 Sep<br />-10 Oct</td>
+<td>+21 Sep<br />-9 Oct</td>
+<td>+22 Sep<br />-8 Oct</td>
+<td>+23 Sep<br />-7 Oct</td>
 </tr>
-<tr align='center'><td>Brumaire</td><td>+20 Oct<br>-11 Nov</td>
-<td>+21 Oct<br>-10 Nov</td>
-<td>+22 Oct<br>-9 Nov</td>
-<td>+23 Oct<br>-8 Nov</td>
+<tr align='center'><td>Brumaire</td><td>+20 Oct<br />-11 Nov</td>
+<td>+21 Oct<br />-10 Nov</td>
+<td>+22 Oct<br />-9 Nov</td>
+<td>+23 Oct<br />-8 Nov</td>
 </tr>
-<tr align='center'><td>Frimaire</td><td>+19 Nov<br>-11 Dec</td>
-<td>+20 Nov<br>-10 Dec</td>
-<td>+21 Nov<br>-9 Dec</td>
-<td>+22 Nov<br>-8 Dec</td>
+<tr align='center'><td>Frimaire</td><td>+19 Nov<br />-11 Dec</td>
+<td>+20 Nov<br />-10 Dec</td>
+<td>+21 Nov<br />-9 Dec</td>
+<td>+22 Nov<br />-8 Dec</td>
 </tr>
 <tr align='center'><td>Nivôse</td><td>+19 Dec</td>
 <td>+20 Dec</td>
@@ -45,10 +52,10 @@
 <td>-10 Jan</td>
 <td>-9 Jan</td>
 </tr>
-<tr align='center'><td>Pluviôse</td><td>+18 Jan<br>-13 Feb</td>
-<td>+19 Jan<br>-12 Feb</td>
-<td>+20 Jan<br>-11 Feb</td>
-<td>+21 Jan<br>-10 Feb</td>
+<tr align='center'><td>Pluviôse</td><td>+18 Jan<br />-13 Feb</td>
+<td>+19 Jan<br />-12 Feb</td>
+<td>+20 Jan<br />-11 Feb</td>
+<td>+21 Jan<br />-10 Feb</td>
 </tr>
 <tr align='center'><td>Ventôse</td><td>+17 Feb</td>
 <td>+18 Feb</td>
@@ -63,37 +70,37 @@
 <td>-10 Mar</td>
 <td>-9 Mar</td>
 </tr>
-<tr align='center'><td>Germinal</td><td>+18 Mar<br>-13 Apr</td>
-<td>+19 Mar<br>-12 Apr</td>
-<td>+20 Mar<br>-11 Apr</td>
-<td>+21 Mar<br>-10 Apr</td>
+<tr align='center'><td>Germinal</td><td>+18 Mar<br />-13 Apr</td>
+<td>+19 Mar<br />-12 Apr</td>
+<td>+20 Mar<br />-11 Apr</td>
+<td>+21 Mar<br />-10 Apr</td>
 </tr>
-<tr align='center'><td>Floréal</td><td>+17 Apr<br>-13 May</td>
-<td>+18 Apr<br>-12 May</td>
-<td>+19 Apr<br>-11 May</td>
-<td>+20 Apr<br>-10 May</td>
+<tr align='center'><td>Floréal</td><td>+17 Apr<br />-13 May</td>
+<td>+18 Apr<br />-12 May</td>
+<td>+19 Apr<br />-11 May</td>
+<td>+20 Apr<br />-10 May</td>
 </tr>
-<tr align='center'><td>Prairial</td><td>+17 May<br>-14 Jun</td>
-<td>+18 May<br>-13 Jun</td>
-<td>+19 May<br>-12 Jun</td>
-<td>+20 May<br>-11 Jun</td>
+<tr align='center'><td>Prairial</td><td>+17 May<br />-14 Jun</td>
+<td>+18 May<br />-13 Jun</td>
+<td>+19 May<br />-12 Jun</td>
+<td>+20 May<br />-11 Jun</td>
 </tr>
-<tr align='center'><td>Messidor</td><td>+16 Jun<br>-14 Jul</td>
-<td>+17 Jun<br>-13 Jul</td>
-<td>+18 Jun<br>-12 Jul</td>
-<td>+19 Jun<br>-11 Jul</td>
+<tr align='center'><td>Messidor</td><td>+16 Jun<br />-14 Jul</td>
+<td>+17 Jun<br />-13 Jul</td>
+<td>+18 Jun<br />-12 Jul</td>
+<td>+19 Jun<br />-11 Jul</td>
 </tr>
-<tr align='center'><td>Thermidor</td><td>+16 Jul<br>-15 Aug</td>
-<td>+17 Jul<br>-14 Aug</td>
-<td>+18 Jul<br>-13 Aug</td>
-<td>+19 Jul<br>-12 Aug</td>
+<tr align='center'><td>Thermidor</td><td>+16 Jul<br />-15 Aug</td>
+<td>+17 Jul<br />-14 Aug</td>
+<td>+18 Jul<br />-13 Aug</td>
+<td>+19 Jul<br />-12 Aug</td>
 </tr>
-<tr align='center'><td>Fructidor</td><td>+15 Aug<br>-16 Sep</td>
-<td>+16 Aug<br>-15 Sep</td>
-<td>+17 Aug<br>-14 Sep</td>
-<td>+18 Aug<br>-13 Sep</td>
+<tr align='center'><td>Fructidor</td><td>+15 Aug<br />-16 Sep</td>
+<td>+16 Aug<br />-15 Sep</td>
+<td>+17 Aug<br />-14 Sep</td>
+<td>+18 Aug<br />-13 Sep</td>
 </tr>
-<tr align='center'><td>Sans-Culottides<br>Additional Days</td><td>+14 Sep</td>
+<tr align='center'><td>Sans-Culottides<br />Additional Days</td><td>+14 Sep</td>
 <td>+15 Sep</td>
 <td>+16 Sep</td>
 <td>+17 Sep</td>
@@ -165,3 +172,5 @@ since the French Revolutionary day number is
 <strong>18</strong>,
 you use <em>-9 Mar</em>, and you get
 <strong>9 March 1800</strong>.
+</body>
+</html>
