--- a/eg/result/r2g_fr.html
+++ b/eg/result/r2g_fr.html
@@ -1,12 +1,19 @@
+<html>
+<head>
+<title>Conversion de dates du calendrier républicain vers le calendrier grégorien</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1>Conversion de dates du calendrier républicain vers le calendrier grégorien</h1>
 <table border><tr><td></td><th align='center' colspan='8'>Lettres pour une année</th></tr><tr align='right'><td></td>
-<td> 0<br> 8<br>16<br>24<br>32<br>40<br>48<br>56<br>64<br>72<br>80<br>88<br>96</td>
-<td> 1<br> 9<br>17<br>25<br>33<br>41<br>49<br>57<br>65<br>73<br>81<br>89<br>97</td>
-<td> 2<br>10<br>18<br>26<br>34<br>42<br>50<br>58<br>66<br>74<br>82<br>90<br>98</td>
-<td> 3<br>11<br>19<br>27<br>35<br>43<br>51<br>59<br>67<br>75<br>83<br>91<br>99</td>
-<td> 4<br>12<br>20<br>28<br>36<br>44<br>52<br>60<br>68<br>76<br>84<br>92<br>&nbsp;</td>
-<td> 5<br>13<br>21<br>29<br>37<br>45<br>53<br>61<br>69<br>77<br>85<br>93<br>&nbsp;</td>
-<td> 6<br>14<br>22<br>30<br>38<br>46<br>54<br>62<br>70<br>78<br>86<br>94<br>&nbsp;</td>
-<td> 7<br>15<br>23<br>31<br>39<br>47<br>55<br>63<br>71<br>79<br>87<br>95<br>&nbsp;</td>
+<td> 0<br /> 8<br />16<br />24<br />32<br />40<br />48<br />56<br />64<br />72<br />80<br />88<br />96</td>
+<td> 1<br /> 9<br />17<br />25<br />33<br />41<br />49<br />57<br />65<br />73<br />81<br />89<br />97</td>
+<td> 2<br />10<br />18<br />26<br />34<br />42<br />50<br />58<br />66<br />74<br />82<br />90<br />98</td>
+<td> 3<br />11<br />19<br />27<br />35<br />43<br />51<br />59<br />67<br />75<br />83<br />91<br />99</td>
+<td> 4<br />12<br />20<br />28<br />36<br />44<br />52<br />60<br />68<br />76<br />84<br />92<br />&nbsp;</td>
+<td> 5<br />13<br />21<br />29<br />37<br />45<br />53<br />61<br />69<br />77<br />85<br />93<br />&nbsp;</td>
+<td> 6<br />14<br />22<br />30<br />38<br />46<br />54<br />62<br />70<br />78<br />86<br />94<br />&nbsp;</td>
+<td> 7<br />15<br />23<br />31<br />39<br />47<br />55<br />63<br />71<br />79<br />87<br />95<br />&nbsp;</td>
 </tr>
 <tr align='center'><td>1 - 8</td><td>ch</td><td>bg</td><td>bg</td><td>bg</td><td>cg</td><td>bg</td><td>bg</td><td>bg</td></tr>
 <tr align='center'><td>9 - 19</td><td>dh</td><td>ch</td><td>ch</td><td>ch</td><td>dh</td><td>ch</td><td>ch</td><td>ch</td></tr>
@@ -19,20 +26,20 @@
 </table>
 <p><table border><tr><th align='center' colspan='5'>Début d'année</th></tr>
 <tr align='center'><th>Année + 1791</th><th>a</th><th>b</th><th>c</th><th>d</th></tr>
-<tr align='center'><td>Vendémiaire</td><td>+20 sep<br>-10 oct</td>
-<td>+21 sep<br>-9 oct</td>
-<td>+22 sep<br>-8 oct</td>
-<td>+23 sep<br>-7 oct</td>
+<tr align='center'><td>Vendémiaire</td><td>+20 sep<br />-10 oct</td>
+<td>+21 sep<br />-9 oct</td>
+<td>+22 sep<br />-8 oct</td>
+<td>+23 sep<br />-7 oct</td>
 </tr>
-<tr align='center'><td>Brumaire</td><td>+20 oct<br>-11 nov</td>
-<td>+21 oct<br>-10 nov</td>
-<td>+22 oct<br>-9 nov</td>
-<td>+23 oct<br>-8 nov</td>
+<tr align='center'><td>Brumaire</td><td>+20 oct<br />-11 nov</td>
+<td>+21 oct<br />-10 nov</td>
+<td>+22 oct<br />-9 nov</td>
+<td>+23 oct<br />-8 nov</td>
 </tr>
-<tr align='center'><td>Frimaire</td><td>+19 nov<br>-11 déc</td>
-<td>+20 nov<br>-10 déc</td>
-<td>+21 nov<br>-9 déc</td>
-<td>+22 nov<br>-8 déc</td>
+<tr align='center'><td>Frimaire</td><td>+19 nov<br />-11 déc</td>
+<td>+20 nov<br />-10 déc</td>
+<td>+21 nov<br />-9 déc</td>
+<td>+22 nov<br />-8 déc</td>
 </tr>
 <tr align='center'><td>Nivôse</td><td>+19 déc</td>
 <td>+20 déc</td>
@@ -45,10 +52,10 @@
 <td>-10 jan</td>
 <td>-9 jan</td>
 </tr>
-<tr align='center'><td>Pluviôse</td><td>+18 jan<br>-13 fév</td>
-<td>+19 jan<br>-12 fév</td>
-<td>+20 jan<br>-11 fév</td>
-<td>+21 jan<br>-10 fév</td>
+<tr align='center'><td>Pluviôse</td><td>+18 jan<br />-13 fév</td>
+<td>+19 jan<br />-12 fév</td>
+<td>+20 jan<br />-11 fév</td>
+<td>+21 jan<br />-10 fév</td>
 </tr>
 <tr align='center'><td>Ventôse</td><td>+17 fév</td>
 <td>+18 fév</td>
@@ -63,37 +70,37 @@
 <td>-10 mars</td>
 <td>-9 mars</td>
 </tr>
-<tr align='center'><td>Germinal</td><td>+18 mars<br>-13 avr</td>
-<td>+19 mars<br>-12 avr</td>
-<td>+20 mars<br>-11 avr</td>
-<td>+21 mars<br>-10 avr</td>
+<tr align='center'><td>Germinal</td><td>+18 mars<br />-13 avr</td>
+<td>+19 mars<br />-12 avr</td>
+<td>+20 mars<br />-11 avr</td>
+<td>+21 mars<br />-10 avr</td>
 </tr>
-<tr align='center'><td>Floréal</td><td>+17 avr<br>-13 mai</td>
-<td>+18 avr<br>-12 mai</td>
-<td>+19 avr<br>-11 mai</td>
-<td>+20 avr<br>-10 mai</td>
+<tr align='center'><td>Floréal</td><td>+17 avr<br />-13 mai</td>
+<td>+18 avr<br />-12 mai</td>
+<td>+19 avr<br />-11 mai</td>
+<td>+20 avr<br />-10 mai</td>
 </tr>
-<tr align='center'><td>Prairial</td><td>+17 mai<br>-14 juin</td>
-<td>+18 mai<br>-13 juin</td>
-<td>+19 mai<br>-12 juin</td>
-<td>+20 mai<br>-11 juin</td>
+<tr align='center'><td>Prairial</td><td>+17 mai<br />-14 juin</td>
+<td>+18 mai<br />-13 juin</td>
+<td>+19 mai<br />-12 juin</td>
+<td>+20 mai<br />-11 juin</td>
 </tr>
-<tr align='center'><td>Messidor</td><td>+16 juin<br>-14 juil</td>
-<td>+17 juin<br>-13 juil</td>
-<td>+18 juin<br>-12 juil</td>
-<td>+19 juin<br>-11 juil</td>
+<tr align='center'><td>Messidor</td><td>+16 juin<br />-14 juil</td>
+<td>+17 juin<br />-13 juil</td>
+<td>+18 juin<br />-12 juil</td>
+<td>+19 juin<br />-11 juil</td>
 </tr>
-<tr align='center'><td>Thermidor</td><td>+16 juil<br>-15 août</td>
-<td>+17 juil<br>-14 août</td>
-<td>+18 juil<br>-13 août</td>
-<td>+19 juil<br>-12 août</td>
+<tr align='center'><td>Thermidor</td><td>+16 juil<br />-15 août</td>
+<td>+17 juil<br />-14 août</td>
+<td>+18 juil<br />-13 août</td>
+<td>+19 juil<br />-12 août</td>
 </tr>
-<tr align='center'><td>Fructidor</td><td>+15 août<br>-16 sep</td>
-<td>+16 août<br>-15 sep</td>
-<td>+17 août<br>-14 sep</td>
-<td>+18 août<br>-13 sep</td>
+<tr align='center'><td>Fructidor</td><td>+15 août<br />-16 sep</td>
+<td>+16 août<br />-15 sep</td>
+<td>+17 août<br />-14 sep</td>
+<td>+18 août<br />-13 sep</td>
 </tr>
-<tr align='center'><td>Sans-Culottides<br>Jours complémentaires</td><td>+14 sep</td>
+<tr align='center'><td>Sans-Culottides<br />Jours complémentaires</td><td>+14 sep</td>
 <td>+15 sep</td>
 <td>+16 sep</td>
 <td>+17 sep</td>
@@ -169,3 +176,5 @@ vous devrez utiliser la formule
 <em>-9 mars</em>,
 et vous obtiendrez
 <strong>9 Mars 1800</strong>.
+</body>
+</html>
